--- a/customer_labels/views/customer_label_report.xml
+++ b/customer_labels/views/customer_label_report.xml
@@ -7,8 +7,8 @@
         model="res.partner"
         report_type="qweb-pdf"
         string="Customer Label"
-        name="customer_label_report_v9c.report_label"
-        file="customer_label_report_v9c.report_label"
+        name="customer_labels.report_label"
+        file="customer_labels.report_label"
     />
 
     <template id="report_label">
